--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
+            <header><h1>Hi, I'm Ale</h1></header>
+            <main><h3>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</h3></main>
             <div id="div-1" class="flex-items">
-                Div 1
+                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</p>
             </div>
             <div id="div-2" class="flex-items">
-                Div 2
+                <p>I am a <span>Curious & Adaptive</span> and strive to be flexible at every chance life throws at me, moving like liquid to handle and overcome every situation and challenge, bring it on life, I'm right here, see what you can come up with, and i'll adapt adapt adaptively</p>
             </div>
             <div id="div-3" class="flex-items">
-                Div 3
+                <p>I am a <span> Extremely Curious </span> to flex this boxes to their flexing capacities and seeing how flexed I can get them, in different directions and dimensions, to handle what seems impossible now, bit with movement becomes possible, because adaptability is intelligence</p>
             </div>
             <footer>Footer</footer>
         </section>
